# cpufetch-rs

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  mise.toml  release-plz.toml  renovate.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude/agents/: security-reviewer.md  test-runner.md
.claude/skills/clippy/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml  claude-code-review.yaml  claude.yaml  osv-scanner.yml  osv-scnner.yml  release-plz.yml  release.yml  security.yml
.woodpecker/: ci.yaml  release-plz.yaml  release.yaml
docs/: CONTRIBUTING.md  ROADMAP.md  TODO.md
src/: error.rs  lib.rs  main.rs
src/arch/: aarch64.rs  mod.rs  x86_64.rs
src/cli/: args.rs  mod.rs
src/cpu/: cpuid.rs  flags.rs  frequency.rs  info.rs  mod.rs  perf.rs  uarch.rs
src/printer/: ascii.rs  layout.rs  logo.rs  mod.rs
tests/: arm_support_test.rs  cpu_detect.rs  cpuid_test.rs  integration.rs  printer_test.rs
