[package]
name          = "cpufetch-rs"
version       = "0.0.1"
edition       = "2024"
license       = "MIT OR Apache-2.0"
description   = "A blazing-fast, modern, and elegant Rust rewrite of cpufetch!"
readme        = "README.md"
repository    = "https://github.com/sm-moshi/cpufetch-rs"
documentation = "https://docs.rs/cpufetch-rs"
keywords      = ["cpu", "fetch", "cpufetch", "rust", "rs", "cpufetch-rs"]
categories    = ["command-line-utilities", "system-tools"]
exclude       = ["docs/", "target/", ".github/", ".vscode/"]

[[bin]]
name = "cpufetch"
path = "src/main.rs"

[dependencies]
libc       = "1.0.0-alpha.1"
sysinfo    = "0.37.0"
sys-info   = "0.9.0"
raw-cpuid  = "11.5.0"
platforms  = "3.6.0"
once_cell  = "1.21.3"
clap       = { version = "4.5.45", features = ["derive"] }
colored    = "3.0.0"
regex      = "1.11.1"
serde      = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml       = "0.9.5"
crossterm  = "0.29.0"
textwrap   = "0.16.2"
termcolor  = "1.4.1"
thiserror  = "2.0.12"
anyhow     = "1.0.99"
bitflags   = { version = "2.9.3", features = ["serde"] }
num_cpus   = "1.17.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows         = { version = "0.61.3", features = ["Win32_System_SystemInformation"] }
wmi             = "0.16.0"
windows-version = "0.1.6"

[target.'cfg(target_os = "macos")'.dependencies]
sysctl = "0.6.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
assert_cmd        = "2.0.17"
serial_test       = "3.2.0"
predicates        = "3.1.3"
tempfile          = "3.19.1"

[build-dependencies]
cc = "1.2.30"

[features]
default = []
