[package]
name          = "cpufetch-rs"
version       = "0.0.1"
edition       = "2024"
license       = "MIT OR Apache-2.0"
description   = "A blazing-fast, modern, and elegant Rust rewrite of cpufetch!"
readme        = "README.md"
repository    = "https://github.com/sm-moshi/cpufetch-rs"
documentation = "https://docs.rs/cpufetch-rs"
keywords      = ["cpu", "fetch", "cpufetch", "rust", "rs", "cpufetch-rs"]
categories    = ["command-line-utilities", "system-tools"]
exclude       = ["docs/", "target/", ".github/", ".vscode/"]

[[bin]]
name = "cpufetch"
path = "src/main.rs"

[dependencies]
# Error handling
thiserror = "2.0.17"
anyhow    = { version = "1.0.99", optional = true }

# CPU information and detection
raw-cpuid = "11.6.0"
bitflags  = { version = "2.10.0", features = ["serde"] }
num_cpus  = "1.17.0"
once_cell = "1.21.3"
libc      = "1.0.0-alpha.1"

# System information (optional, enabled with 'frequency')
sysinfo   = { version = "0.37.0", optional = true }
sys-info  = { version = "0.9.0", optional = true }
platforms = { version = "3.6.0", optional = true }

# Serialization (optional, enabled with 'json')
serde      = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
toml       = { version = "0.9.5", optional = true }

# CLI and display (optional, enabled with 'cli' and 'display')
clap      = { version = "4.5.51", features = ["derive"], optional = true }
colored   = { version = "3.0.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
textwrap  = { version = "0.16.2", optional = true }
termcolor = { version = "1.4.1", optional = true }
regex     = { version = "1.12.2", optional = true }

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.18.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.0", features = [
    "Win32_System_SystemInformation",
], optional = true }
wmi = { version = "0.18.0", optional = true }
windows-version = { version = "0.1.6", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
sysctl = { version = "0.6.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
assert_cmd        = "2.0.17"
serial_test       = "3.2.0"
predicates        = "3.1.3"
tempfile          = "3.23.0"

[build-dependencies]
cc = "1.2.43"

[features]
# Base features
default = ["full"]
full    = ["cli", "display", "frequency", "json", "linux", "windows", "macos"]

# Core functional modules
cpu = [] # Always included - CPU detection and feature flags
frequency = [
    "dep:sys-info",
    "dep:sysinfo",
    "dep:platforms",
] # Frequency detection

# Platform-specific features
linux   = ["dep:procfs"]
windows = ["dep:windows", "dep:wmi", "dep:windows-version"]
macos   = ["dep:sysctl"]

# Output and interface features
cli = ["dep:clap", "dep:anyhow"] # Command-line interface
display = [
    "dep:colored",
    "dep:crossterm",
    "dep:textwrap",
    "dep:termcolor",
    "dep:regex",
]
json = ["dep:serde_json"]
config = ["dep:toml"]

# Metadata for cargo-udeps to explicitly ignore certain dependencies
[package.metadata.cargo-udeps]
ignore = []
