[package]
name          = "cpufetch-rs"
version       = "0.0.2"
edition       = "2024"
rust-version  = "1.85"
license       = "MIT OR Apache-2.0"
description   = "A cross-platform Rust CLI and library for fetching detailed CPU information"
readme        = "README.md"
repository    = "https://github.com/sm-moshi/cpufetch-rs"
documentation = "https://docs.rs/cpufetch-rs"
keywords      = ["cpu", "cpufetch", "system-info", "x86-64", "aarch64"]
categories    = ["command-line-utilities", "hardware-support"]
exclude       = [".claude/", ".github/", "docs/", ".vscode/", "dist/"]

[[bin]]
name = "cpufetch"
path = "src/main.rs"

[dependencies]
# Error handling
thiserror = "2.0.18"
anyhow    = { version = "1.0.102", optional = true }

# CPU information and detection
raw-cpuid = "11.6.0"
bitflags  = { version = "2.11.0", features = ["serde"] }
num_cpus  = "1.17.0"

# System information (optional, enabled with 'frequency')
sysinfo   = { version = "0.38.4", optional = true }
sys-info  = { version = "0.9.1", optional = true }
platforms = { version = "3.9.0", optional = true }

# Serialization (optional, enabled with 'json')
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", optional = true }
toml       = { version = "1.1.0", optional = true }

# CLI and display (optional, enabled with 'cli' and 'display')
clap      = { version = "4.6.0", features = ["derive"], optional = true }
colored   = { version = "3.1.1", optional = true }
crossterm = { version = "0.29.0", optional = true }
textwrap  = { version = "0.16.2", optional = true }
termcolor = { version = "1.4.1", optional = true }
regex     = { version = "1.12.3", optional = true }

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.18.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_System_SystemInformation",
], optional = true }
wmi = { version = "0.18.3", optional = true }
windows-version = { version = "0.1.6", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
sysctl = { version = "0.7.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
assert_cmd        = "2.2.0"
serial_test       = "3.4.0"
predicates        = "3.1.4"
tempfile          = "3.27.0"

[features]
# Base features
default = ["full"]
full    = ["cli", "display", "frequency", "json", "linux", "windows", "macos"]

# Core functional modules
cpu = [] # Always included - CPU detection and feature flags
frequency = [
  "dep:sys-info",
  "dep:sysinfo",
  "dep:platforms",
] # Frequency detection

# Platform-specific features
linux   = ["dep:procfs"]
windows = ["dep:windows", "dep:wmi", "dep:windows-version"]
macos   = ["dep:sysctl"]

# Output and interface features
cli = ["dep:clap", "dep:anyhow"] # Command-line interface
display = [
  "dep:colored",
  "dep:crossterm",
  "dep:textwrap",
  "dep:termcolor",
  "dep:regex",
]
json = ["dep:serde_json"]
config = ["dep:toml"]

[lints.clippy]
all                     = { level = "warn", priority = -1 }
pedantic                = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
too_many_lines          = "allow"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
lto           = "thin"
codegen-units = 1
opt-level     = 3
debug         = false
strip         = "symbols"

[profile.dev]
opt-level = 1
debug     = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-udeps]
ignore = []
